@@ -1,3 +1,7 @@
+#
+# Don't enter the subdirs of two platforms that we don't care about
+# anyway.
+#
 Index: xscreensaver-git/Makefile.in
 ===================================================================
 --- xscreensaver-git.orig/Makefile.in	2016-12-11 15:04:10.000000000 +0100
